--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -20,7 +20,12 @@ resilience4j.circuitbreaker.instances.inventory.waitDurationInOpenState=5s
 resilience4j.circuitbreaker.instances.inventory.permittedNumberOfCallsInHalfOpenState=3
 resilience4j.circuitbreaker.instances.inventory.automaticTransitionFromOpenToHalfOpenEnabled=true
 
-resilience4j.timelimiter.instances.inventory.timeout-duration=3s
+resilience4j.timelimiter.instances.inventory.timeout-duration=8s
 
 resilience4j.retry.instances.inventory.max-attempts=3
 resilience4j.retry.instances.inventory.wait-duration=5s
+
+
+
+spring.zipkin.base-url=http://localhost:9411
+spring.sleuth.sampler.probability= 1.0
